# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-02-22  Christian Heller  <christian.heller@tuxtax.de>
        * Update project plan on website

2011-02-19  Christian Heller  <christian.heller@tuxtax.de>
        * Fix error that size was set one too large in function "replace_adjust"
        * Fix error that count was increased before replacing elements in function "replace_adjust",
            which may cause memory errors when "sensing" threads access the destination
            because the count is higher than the actual number of valid elements
        * Replace old "append..." functions with new ones and delete directory "executor/accessor/appender/"

2011-02-06  Christian Heller  <christian.heller@tuxtax.de>
        * Solve conflict between old and new "replace" (formerly "set") functions

2011-02-03  Christian Heller  <christian.heller@tuxtax.de>
        * Move "assign" and "set" functionality from "executor/accessor/" into "executor/modifier/"
        * Rename "set" functions into "replace"

2011-02-01  Christian Heller  <christian.heller@tuxtax.de>
        * Complete "compound_reallocator" and "signal_memory_reallocator"
        * Adapt "compound_setter" and "signal_memory_setter" accordingly

2011-01-30  Christian Heller  <christian.heller@tuxtax.de>
        * Add files "compound_reallocator.c" and "signal_memory_reallocator.c"

2011-01-29  Christian Heller  <christian.heller@tuxtax.de>
        * Fix wrong cast to int instead of double for wait time in socket sensing service
        * Identify problem that html file http response was created twice and
            only first action was executed, but not later ones;